--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "rehux-ui-onboarding",
+  "name": "@repo/rehux-ui-onboarding",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "npm@10.2.4",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -46,6 +47,7 @@
     "lint-staged": "^15.4.3",
     "prettier": "^3.4.2",
     "storybook": "^8.5.2",
+    "turbo": "^2.3.4",
     "typescript": "^5"
   }
 }
