--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.0",
     "next": "15.1.6",
     "react": "^19.0.0",
