--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.0",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "valibot": "^1.0.0-beta.14"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
