--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "valibot": "^1.0.0-beta.14"
   },
   "devDependencies": {
